# kalshi-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kalshi_mcp/: auth.py  client.py  server.py
